<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_nano_apps"
        android:textColor="#fff"
        android:textSize="23sp"
        android:gravity="center"
        android:layout_gravity="top"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/spotify_app"
            style="@style/portfolio_button"/>

        <Button
            android:id="@+id/scores_app"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/scores_app"
            style="@style/portfolio_button"/>

        <Button
            android:id="@+id/library_app"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/library_app"
            style="@style/portfolio_button"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/build_it_bigger_app"
            style="@style/portfolio_button"/>

        <Button
            android:id="@+id/xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/xyz_reader_app"
            style="@style/portfolio_button"/>

        <Button
            android:id="@+id/capstone_my_app"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/capstone_app"
            android:background="#673AB7"
            android:textColor="#FFEB3B"/>


    </LinearLayout>
</FrameLayout>
